--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "obsidian-code-embed",
-	"version": "0.0.1",
-	"description": "",
+	"version": "1.0.0",
+	"description": "Embed code files as code blocks.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
@@ -9,7 +9,7 @@
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "Sveitech",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
